--- a/src/views/job.ejs
+++ b/src/views/job.ejs
@@ -24,11 +24,12 @@
     
   </head>
   <body id="page-job">
+    <!-- ejs -->
     <%- include('parts/page-header', { title: 'Adicionar Novo Job'})  %> 
 
     <div class="container flex animate-up delay-2">
       <main>
-        <form id="form-job">
+        <form id="form-job" action="/job" method="POST">
           <fieldset>
             <legend>Dados do Job</legend>
             <div class="separator light"></div>
