--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -76,30 +76,31 @@
         <h1 class="sr-only">Trabalhos</h1>
 
         <div class="cards">
-
+          
+          
+          <!-- Para cada novo Job cadastrado, apresenta os dados atualizados -->
           <% jobs.forEach((job) =>{ %>
 
-
-            <div class="card progress" data-id="<%= job.id %> ">
+            <div class="card <%= job.status %> " data-id="<%= job.id %> ">
               <div class="id column"><%= job.id %> </div>
               <div class="name column">
                 <%= job.name %> 
               </div>
               <div class="deadline column">
                 <span>Prazo</span>
-                <p>3 dias para a entrega</p>
+                <p><%= job.status === 'done' ? "Prazo encerrado" : `${job.remaining} dias para entrega`%> </p>
               </div>
               <div class="amount column">
                 <span>Valor</span>
-                <p>R$ 4500,00</p>
+                <p>R$ <%= job.budget.toFixed(2).replace('.', ',') %> </p>
               </div>
               <div class="status badge column">
-                Em andamento
+                <%= job.status === "done" ? "Encerrado" : "Em andamento" %> 
               </div>
               <div class="actions column flex">
                 <p class="sr-only">Ações</p>
                 <a 
-                  href="/job/edit" 
+                  href="/job/<%= job.id %> " 
                   class="button white edit" 
                   title="Editar Job">
                   <img src="/images/edit-24.svg" alt="Editar Job" />
