--- a/src/views/job-edit.ejs
+++ b/src/views/job-edit.ejs
@@ -30,7 +30,7 @@
     <%- include('parts/page-header', { title: 'Editar Job'})  %> 
 
     <div class="container flex animate-up delay-2">
-        <form id="form-job" method="POST" action="/job/<%= job.id %> ">
+        <form id="form-job" method="post" action="/job/<%= job.id %> ">
           <fieldset>
             <legend>Dados do Job</legend>
             <div class="separator light"></div>
@@ -54,7 +54,7 @@
                   step="0.1" 
                   id="daily-hours" 
                   name="daily-hours"
-                  value="<%= job["daily-hours"] %> "/>
+                  value="<%= job["daily-hours"] %>"/>
               </div>
 
               <div class="input-wrapper">
@@ -64,8 +64,7 @@
                   type="number"
                   id="total-hours" 
                   name="total-hours"
-                  value="<%= job["total-hours"] %> " 
-                  />
+                  value="<%= job["total-hours"]%>"/>
               </div>
             </div>
           </fieldset>
@@ -117,7 +116,7 @@
       </div>
       <form 
         method="post" 
-        action="/job/delete/{JOBID}" 
+        action="/job/delete/<%= job.id %> " 
         id="delete-job"></form>
     </div>
     <!-- end modal-wrapper -->
