transferido responsabilidades do index para dashboardController

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -32,13 +32,18 @@
           <img id="logo" src="/images/logo.svg" alt="Logo" />
           <span id="notification">
             <img src="/images/alert-octagon.svg" alt="Alerta" />
-            Você tem 2 horas livres no seu dia
+
+            <% if(freeHours <= 0) { %>
+              Você não tem horas livres
+            <% } else { %>
+              Você tem <%= freeHours %>  horas livres no seu dia
+            <% } %>
           </span>
+
+          <!-- Recebe os dados do Perfil pelo dashboardController -->
           <a href="/profile" id="avatar-profile">
-            <p>Jakeliny <span>Ver perfil</span></p>
-            <img
-              src="https://avatars.githubusercontent.com/u/17316392?s=460&u=6912a91a70bc89745a2079fdcdad3bc3ce370f13&v=4"
-            />
+            <p><%= profile.name %> <span>Ver perfil</span></p> 
+            <img src="<%= profile.avatar %> "/>
           </a>
         </section>
 
@@ -47,17 +52,18 @@
         <section id="summary" class="animate-up delay-1">
           <h2 class="sr-only">Sumário</h2>
 
+          <!-- Recebe os dados de status pelo dashboardController -->
           <div class="info">
             <div class="total">
-              <strong>12</strong>
+              <strong><%= statusCount.total%></strong>
               Projetos ao total
             </div>
             <div class="in-progress">
-              <strong>7</strong>
+              <strong><%= statusCount.progress %> </strong>
               Em andamento
             </div>
             <div class="finished">
-              <strong>4</strong>
+              <strong><%= statusCount.done %> </strong>
               Encerrados
             </div>
           </div>
